switch data store to Convex, detach frontend

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "type": "module",
   "scripts": {
     "start": "next dev",
-    "build": "bun data:update && next build",
+    "build": "bun data:fetch && next build",
     "preview": "next build && next start",
     "lint": "eslint .",
+    "data:fetch": "bun scripts/convex/fetch-libraries-data.ts",
     "data:update": "bun scripts/build-and-score-data",
     "data:test": "bun scripts/validate-libraries",
     "data:validate": "ajv validate -s react-native-libraries.schema.json -d react-native-libraries.json --verbose --allowUnionTypes",
@@ -24,7 +25,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@sentry/react": "^9.40.0",
-    "@vercel/blob": "^0.27.3",
+    "convex": "^1.25.4",
     "expo": "54.0.0-canary-20250729-d8899ae",
     "expo-font": "13.4.0-canary-20250811-5c940c0",
     "lodash": "^4.17.21",
