--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     }
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "convex/_generated"
   ],
   "include": [
     "next-env.d.ts",
