--- a/package.json
+++ b/package.json
@@ -25,34 +25,34 @@
     "@react-native-picker/picker": "^2.11.1",
     "@sentry/react": "^9.40.0",
     "@vercel/blob": "^0.27.3",
-    "expo": "54.0.0-canary-20250729-d8899ae",
-    "expo-font": "13.4.0-canary-20250811-5c940c0",
+    "expo": "54.0.0-preview.6",
+    "expo-font": "^14.0.2",
     "lodash": "^4.17.21",
-    "next": "^15.4.6",
+    "next": "^15.5.0",
     "node-emoji": "^2.2.0",
     "react": "19.1.1",
     "react-content-loader": "^7.1.1",
     "react-dom": "19.1.1",
     "react-easy-linkify": "^1.0.8",
     "react-native": "0.81.0",
-    "react-native-safe-area-context": "5.5.2",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-svg": "^15.12.1",
-    "react-native-web": "^0.21.0",
+    "react-native-web": "^0.21.1",
     "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@expo/next-adapter": "^6.0.0",
-    "@next/bundle-analyzer": "^15.4.6",
+    "@next/bundle-analyzer": "^15.5.0",
     "@types/bun": "^1.2.20",
     "@types/lodash": "^4.17.20",
-    "@types/react": "~19.1.10",
+    "@types/react": "~19.1.11",
     "ajv-cli": "^5.0.0",
-    "browserslist": "^4.25.2",
+    "browserslist": "^4.25.3",
     "cheerio": "^1.1.2",
     "cross-fetch": "^4.1.0",
     "dotenv": "^17.2.1",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "^15.4.6",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.0",
     "eslint-config-universe": "^15.0.3",
     "lint-staged": "^15.5.1",
     "next-compose-plugins": "^2.2.1",
