correct package commit link, types improvements, deps bump

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "strict": false,
     "paths": {
       "~/*": ["./*"]
-    }
+    },
+    "typeRoots": ["types", "node_modules/@types"],
   },
   "exclude": [
     "node_modules"
