--- a/package.json
+++ b/package.json
@@ -17,42 +17,42 @@
     "precommit": "simple-git-hooks && lint-staged"
   },
   "dependencies": {
-    "@expo/html-elements": "^0.12.5",
+    "@expo/html-elements": "^0.13.7",
     "@expo/match-media": "^0.4.0",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "^2.11.2",
     "@sentry/react": "^9.40.0",
     "@vercel/blob": "^0.27.3",
-    "expo": "54.0.0-preview.15",
-    "expo-font": "^14.0.5",
+    "expo": "54.0.6",
+    "expo-font": "^14.0.8",
     "lodash": "^4.17.21",
-    "next": "^15.5.2",
+    "next": "^15.5.3",
     "node-emoji": "^2.2.0",
     "react": "19.1.1",
     "react-content-loader": "^7.1.1",
     "react-dom": "19.1.1",
     "react-easy-linkify": "^1.0.8",
-    "react-native": "0.81.1",
+    "react-native": "0.81.4",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "^15.13.0",
     "react-native-web": "^0.21.1",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@expo/next-adapter": "^6.0.0",
-    "@next/bundle-analyzer": "^15.5.2",
+    "@next/bundle-analyzer": "^15.5.3",
     "@types/bun": "^1.2.21",
     "@types/lodash": "^4.17.20",
-    "@types/react": "^19.1.12",
+    "@types/react": "^19.1.13",
     "ajv-cli": "^5.0.0",
-    "browserslist": "^4.25.4",
+    "browserslist": "^4.26.0",
     "cheerio": "^1.1.2",
     "cross-fetch": "^4.1.0",
     "dotenv": "^17.2.2",
     "eslint": "^9.35.0",
-    "eslint-config-next": "^15.5.2",
+    "eslint-config-next": "^15.5.3",
     "eslint-config-universe": "^15.0.3",
     "lint-staged": "^15.5.1",
     "next-compose-plugins": "^2.2.1",
