replace `lodash` with `es-toolkit`, Next TS config, type tweaks

--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.2",
     "@sentry/react": "^10.12.0",
-    "@vercel/blob": "^0.27.3",
     "expo": "54.0.9",
     "expo-font": "^14.0.8",
-    "lodash": "^4.17.21",
+    "es-toolkit": "^1.39.10",
     "next": "^15.5.3",
     "node-emoji": "^2.2.0",
     "react": "19.1.1",
@@ -46,6 +45,7 @@
     "@types/bun": "^1.2.22",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.13",
+    "@vercel/blob": "^0.27.3",
     "ajv-cli": "^5.0.0",
     "browserslist": "^4.26.2",
     "cheerio": "^1.1.2",
