--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
+    "noImplicitAny": true,
     "paths": {
       "~/*": ["./*"]
     },
