--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
+  "private": true,
   "scripts": {
-    "start": "next dev",
-    "build": "bun data:update && next build",
-    "preview": "next build && next start",
+    "start": "next dev --webpack",
+    "build": "bun data:update && next build --webpack",
+    "preview": "next build --webpack && next start",
     "lint": "eslint .",
     "data:update": "bun scripts/build-and-score-data",
     "data:test": "bun scripts/validate-libraries",
@@ -23,11 +24,11 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
-    "@sentry/react": "^10.20.0",
-    "es-toolkit": "^1.40.0",
-    "expo": "54.0.16",
+    "@sentry/react": "^10.22.0",
+    "es-toolkit": "^1.41.0",
+    "expo": "54.0.20",
     "expo-font": "^14.0.9",
-    "next": "^15.5.6",
+    "next": "^16.0.0",
     "node-emoji": "^2.2.0",
     "react": "19.2.0",
     "react-content-loader": "^7.1.1",
@@ -41,19 +42,19 @@
   },
   "devDependencies": {
     "@expo/next-adapter": "^6.0.0",
-    "@next/bundle-analyzer": "^15.5.6",
+    "@next/bundle-analyzer": "^16.0.0",
     "@prettier/plugin-oxc": "^0.0.4",
-    "@types/bun": "^1.3.0",
+    "@types/bun": "^1.3.1",
     "@types/react": "^19.2.2",
     "@vercel/blob": "^0.27.3",
     "ajv-cli": "^5.0.0",
-    "browserslist": "^4.26.3",
+    "browserslist": "^4.27.0",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "eslint": "^9.38.0",
-    "eslint-config-next": "^15.5.6",
+    "eslint-config-next": "^16.0.0",
     "eslint-config-universe": "^15.0.3",
-    "lint-staged": "^16.2.5",
+    "lint-staged": "^16.2.6",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.5",
@@ -65,7 +66,6 @@
   "resolutions": {
     "eslint-plugin-react-hooks": "~6.1.1"
   },
-  "private": true,
   "simple-git-hooks": {
     "pre-commit": "bunx precommit"
   },
