--- a/.github/workflows/code-lint-and-test.yml
+++ b/.github/workflows/code-lint-and-test.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Lint
       run: bun lint
     - name: Build Next app
-      run: bun next build
+      run: bun next build --webpack
