--- a/app.json
+++ b/app.json
@@ -2,12 +2,11 @@
   "expo": {
     "name": "React Native Directory",
     "slug": "react-native-directory",
-    "privacy": "public",
     "platforms": [
       "web"
     ],
     "version": "1.0.0",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
