--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-svg": "^15.15.0",
     "react-native-web": "^0.21.2",
+    "react-shiki": "^0.9.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
