--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@sentry/react": "^10.26.0",
+    "crypto-js": "^4.2.0",
     "es-toolkit": "^1.42.0",
     "expo": "54.0.25",
     "expo-font": "^14.0.9",
@@ -51,6 +52,7 @@
     "@next/bundle-analyzer": "^16.0.3",
     "@prettier/plugin-oxc": "^0.0.5",
     "@types/bun": "^1.3.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.2.6",
     "@vercel/blob": "^0.27.3",
     "ajv-cli": "^5.0.0",
