--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-shiki": "^0.9.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
+    "remark-emoji": "^5.0.2",
     "remark-gfm": "^4.0.1",
     "use-debounce": "^10.0.6"
   },
