--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@expo/html-elements": "^0.13.7",
     "@expo/match-media": "^0.4.0",
+    "@m2d/react-markdown": "^1.0.0",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@sentry/react": "^10.27.0",
+    "crypto-js": "^4.2.0",
     "es-toolkit": "^1.42.0",
     "expo": "54.0.25",
     "expo-font": "^14.0.9",
@@ -38,6 +40,11 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.2",
+    "react-shiki": "^0.9.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-emoji": "^5.0.2",
+    "remark-gfm": "^4.0.1",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
@@ -46,6 +53,7 @@
     "@next/bundle-analyzer": "^16.0.6",
     "@prettier/plugin-oxc": "^0.1.2",
     "@types/bun": "^1.3.3",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.2.7",
     "@vercel/blob": "^0.27.3",
     "ajv-cli": "^5.0.0",
