--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@sentry/react": "^10.32.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "crypto-js": "^4.2.0",
     "es-toolkit": "^1.43.0",
     "expo": "54.0.30",
     "expo-font": "^14.0.10",
     "next": "^16.1.1",
     "node-emoji": "^2.2.0",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-content-loader": "^7.1.1",
     "react-dom": "19.2.3",
@@ -45,6 +47,8 @@
     "rehype-sanitize": "^6.0.0",
     "remark-emoji": "^5.0.2",
     "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.1.18",
+    "twrnc": "^4.11.1",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
