--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-emoji": "^5.0.2",
     "remark-gfm": "^4.0.1",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.19",
     "twrnc": "^4.11.1",
     "use-debounce": "^10.0.6"
   },
@@ -90,5 +90,8 @@
     "react-native-libraries.json": [
       "bun libraries:cleanup"
     ]
+  },
+  "patchedDependencies": {
+    "twrnc@4.11.1": "patches/twrnc@4.11.1.patch"
   }
 }
