--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
     "react-native-libraries.json": [
       "bun libraries:cleanup"
     ]
+  },
+  "patchedDependencies": {
+    "twrnc@4.11.1": "patches/twrnc@4.11.1.patch"
   }
 }
