--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-font": "^14.0.10",
     "next": "^16.1.1",
     "node-emoji": "^2.2.0",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-content-loader": "^7.1.1",
     "react-dom": "19.2.3",
@@ -45,6 +46,8 @@
     "rehype-sanitize": "^6.0.0",
     "remark-emoji": "^5.0.2",
     "remark-gfm": "^4.0.1",
+    "tailwindcss": "^3.4.19",
+    "twrnc": "^4.16.0",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
