--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-emoji": "^5.0.2",
     "remark-gfm": "^4.0.1",
+    "swr": "^2.3.8",
     "tailwindcss": "^3.4.19",
     "twrnc": "^4.16.0",
     "use-debounce": "^10.0.6"
