setup oxlint, fix new warnings

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "next dev --webpack",
     "build": "bun data:update && bun llms:generate && next build --webpack",
     "preview": "next build --webpack && next start",
-    "lint": "eslint .",
+    "lint": "oxlint --type-aware",
     "data:update": "bun scripts/build-and-score-data",
     "data:test": "bun scripts/validate-libraries",
     "data:validate": "ajv validate -s react-native-libraries.schema.json -d react-native-libraries.json --verbose --allowUnionTypes",
@@ -72,6 +72,8 @@
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.5",
+    "oxlint": "^1.39.0",
+    "oxlint-tsgolint": "^0.11.0",
     "prettier": "^3.7.4",
     "simple-git-hooks": "^2.13.1",
     "typescript": "^5.9.3",
