--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "next dev --webpack",
     "build": "bun data:update && bun llms:generate && next build --webpack",
     "preview": "next build --webpack && next start",
-    "lint": "oxlint --type-aware",
+    "lint": "oxlint --type-aware && bun oxfmt",
     "data:update": "bun scripts/build-and-score-data",
     "data:test": "bun scripts/validate-libraries",
     "data:validate": "ajv validate -s react-native-libraries.schema.json -d react-native-libraries.json --verbose --allowUnionTypes",
@@ -52,7 +52,6 @@
     "use-debounce": "^10.1.0"
   },
   "devDependencies": {
-    "@eslint/json": "^0.14.0",
     "@expo/next-adapter": "^6.0.0",
     "@next/bundle-analyzer": "^16.1.1",
     "@prettier/plugin-oxc": "^0.1.3",
@@ -64,30 +63,22 @@
     "browserslist": "^4.28.1",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.1",
-    "eslint-config-universe": "^15.0.3",
-    "eslint-plugin-prettier": "^5.5.4",
     "lint-staged": "^16.2.7",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.5",
     "oxlint": "^1.39.0",
     "oxlint-tsgolint": "^0.11.0",
-    "prettier": "^3.7.4",
     "simple-git-hooks": "^2.13.1",
     "typescript": "^5.9.3",
     "user-agent-data-types": "^0.4.2"
-  },
-  "resolutions": {
-    "eslint-plugin-react-hooks": "~6.1.1"
   },
   "simple-git-hooks": {
     "pre-commit": "bunx precommit"
   },
   "lint-staged": {
-    "*.{mjs,ts,tsx}": [
-      "eslint --fix"
+    "*.{mjs,ts,tsx,json,yml}": [
+      "oxlint --type-aware --fix"
     ],
     "react-native-libraries.json": [
       "bun libraries:cleanup"
