always use error level

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -22,14 +22,14 @@
     ],
     "func-style": ["error", "declaration"],
     "no-unused-expressions": [
-      "warn",
+      "error",
       {
         "allowShortCircuit": true,
         "enforceForJSX": true
       }
     ],
     "no-unused-vars": [
-      "warn",
+      "error",
       {
         "vars": "all",
         "args": "none",
@@ -38,19 +38,19 @@
         "caughtErrorsIgnorePattern": "^_"
       }
     ],
-    "no-useless-computed-key": "warn",
-    "no-useless-concat": "warn",
-    "no-useless-constructor": "warn",
-    "no-useless-return": "warn",
+    "no-useless-computed-key": "error",
+    "no-useless-concat": "error",
+    "no-useless-constructor": "error",
+    "no-useless-return": "error",
     "no-void": [
       "error",
       {
         "allowAsStatement": true
       }
     ],
-    "prefer-promise-reject-errors": "warn",
-    "prefer-rest-params": "warn",
-    "prefer-spread": "warn",
+    "prefer-promise-reject-errors": "error",
+    "prefer-rest-params": "error",
+    "prefer-spread": "error",
 
     "import/consistent-type-specifier-style": ["error", "prefer-inline"],
     "import/default": "error",
@@ -62,10 +62,10 @@
         "disableScc": true
       }
     ],
-    "import/no-duplicates": "warn",
-    "import/no-named-as-default": "warn",
-    "import/no-named-as-default-member": "warn",
-    "import/no-self-import": "warn",
+    "import/no-duplicates": "error",
+    "import/no-named-as-default": "error",
+    "import/no-named-as-default-member": "error",
+    "import/no-self-import": "error",
     "jsx-a11y/alt-text": "error",
     "jsx-a11y/anchor-has-content": "error",
     "jsx-a11y/anchor-is-valid": "error",
@@ -75,31 +75,31 @@
     "jsx-a11y/no-noninteractive-tabindex": "error",
     "jsx-a11y/no-redundant-roles": "error",
     "jsx-a11y/prefer-tag-over-role": "off",
-    "nextjs/google-font-display": "warn",
-    "nextjs/google-font-preconnect": "warn",
+    "nextjs/google-font-display": "error",
+    "nextjs/google-font-preconnect": "error",
     "nextjs/inline-script-id": "error",
-    "nextjs/next-script-for-ga": "warn",
+    "nextjs/next-script-for-ga": "error",
     "nextjs/no-assign-module-variable": "error",
-    "nextjs/no-async-client-component": "warn",
-    "nextjs/no-before-interactive-script-outside-document": "warn",
-    "nextjs/no-css-tags": "warn",
+    "nextjs/no-async-client-component": "error",
+    "nextjs/no-before-interactive-script-outside-document": "error",
+    "nextjs/no-css-tags": "error",
     "nextjs/no-document-import-in-page": "error",
     "nextjs/no-duplicate-head": "error",
-    "nextjs/no-head-element": "warn",
+    "nextjs/no-head-element": "error",
     "nextjs/no-head-import-in-document": "error",
-    "nextjs/no-html-link-for-pages": "warn",
+    "nextjs/no-html-link-for-pages": "error",
     "nextjs/no-img-element": "off",
-    "nextjs/no-page-custom-font": "warn",
+    "nextjs/no-page-custom-font": "error",
     "nextjs/no-script-component-in-head": "error",
-    "nextjs/no-styled-jsx-in-document": "warn",
-    "nextjs/no-sync-scripts": "warn",
-    "nextjs/no-title-in-document-head": "warn",
-    "nextjs/no-typos": "warn",
-    "nextjs/no-unwanted-polyfillio": "warn",
+    "nextjs/no-styled-jsx-in-document": "error",
+    "nextjs/no-sync-scripts": "error",
+    "nextjs/no-title-in-document-head": "error",
+    "nextjs/no-typos": "error",
+    "nextjs/no-unwanted-polyfillio": "error",
     "react-hooks/rules-of-hooks": "error",
-    "react/jsx-boolean-value": ["warn"],
-    "react/jsx-curly-brace-presence": ["warn"],
-    "react/jsx-fragments": ["warn", "syntax"],
+    "react/jsx-boolean-value": ["error"],
+    "react/jsx-curly-brace-presence": ["error"],
+    "react/jsx-fragments": ["error", "syntax"],
     "react/jsx-key": [
       "error",
       {
@@ -110,13 +110,13 @@
     ],
     "react/jsx-no-duplicate-props": "error",
     "react/jsx-no-undef": "error",
-    "react/no-did-mount-set-state": "warn",
-    "react/no-direct-mutation-state": "warn",
-    "react/no-redundant-should-component-update": "warn",
-    "react/no-this-in-sfc": "warn",
-    "react/no-unknown-property": "warn",
-    "react/no-will-update-set-state": "warn",
-    "react/self-closing-comp": "warn",
+    "react/no-did-mount-set-state": "error",
+    "react/no-direct-mutation-state": "error",
+    "react/no-redundant-should-component-update": "error",
+    "react/no-this-in-sfc": "error",
+    "react/no-unknown-property": "error",
+    "react/no-will-update-set-state": "error",
+    "react/self-closing-comp": "error",
     "typescript/await-thenable": "error",
     "typescript/ban-ts-comment": [
       "error",
