--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start": "next dev --webpack",
     "build": "bun data:update && bun llms:generate && next build --webpack",
     "preview": "next build --webpack && next start",
-    "lint": "oxlint --type-aware && bun oxfmt",
-    "lint:fix": "oxlint --type-aware --fix && bun oxfmt",
+    "lint": "oxlint --type-aware && oxfmt --check",
+    "lint:fix": "oxlint --type-aware --fix && oxfmt",
     "data:update": "bun scripts/build-and-score-data",
     "data:test": "bun scripts/validate-libraries",
     "data:validate": "ajv validate -s react-native-libraries.schema.json -d react-native-libraries.json --verbose --allowUnionTypes",
