add missing oxfmt in dependencies declaration

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.5",
+    "oxfmt": "^0.24.0",
     "oxlint": "^1.39.0",
     "oxlint-tsgolint": "^0.11.0",
     "simple-git-hooks": "^2.13.1",
