debug CI take 2

--- a/.github/workflows/code-lint-and-test.yml
+++ b/.github/workflows/code-lint-and-test.yml
@@ -19,7 +19,9 @@ jobs:
       - name: TSC
         run: bun tsc
       - name: TEST FORMATTING CHANGES
-        run: bun oxfmt react-native-libraries.json > /tmp/react-native-libraries.json && diff -u react-native-libraries.json /tmp/react-native-libraries.json || true
+        run: bun oxfmt react-native-libraries.json
+      - name: PRINT DIFF
+        run: git --no-pager diff -- react-native-libraries.json
       - name: Lint
         run: bun lint
       - name: Build Next app
