enable few more Oxlint rules, fix warnings

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/oxlint/configuration_schema.json",
-  "plugins": ["import", "jsx-a11y", "nextjs", "react", "typescript", "unicorn"],
+  "plugins": ["import", "jsx-a11y", "nextjs", "promise", "react", "typescript", "unicorn"],
   "ignorePatterns": [
     "**/.next",
     "**/.swc",
@@ -96,6 +96,8 @@
     "nextjs/no-title-in-document-head": "error",
     "nextjs/no-typos": "error",
     "nextjs/no-unwanted-polyfillio": "error",
+    "promise/always-return": "error",
+    "promise/no-callback-in-promise": "error",
     "react-hooks/rules-of-hooks": "error",
     "react/jsx-boolean-value": ["error"],
     "react/jsx-curly-brace-presence": ["error"],
@@ -115,6 +117,7 @@
     "react/no-redundant-should-component-update": "error",
     "react/no-this-in-sfc": "error",
     "react/no-unknown-property": "error",
+    "react/no-unescaped-entities": "error",
     "react/no-will-update-set-state": "error",
     "react/self-closing-comp": "error",
     "typescript/await-thenable": "error",
@@ -146,15 +149,37 @@
     "typescript/no-unnecessary-boolean-literal-compare": "error",
     "typescript/no-unnecessary-type-arguments": "error",
     "typescript/no-unnecessary-type-assertion": "error",
+    "typescript/no-unnecessary-type-constraint": "error",
     "typescript/no-unsafe-enum-comparison": "error",
     "typescript/prefer-includes": "error",
+    "typescript/prefer-nullish-coalescing": "error",
     "typescript/prefer-readonly": "error",
     "typescript/return-await": ["error", "error-handling-correctness-only"],
     "typescript/unbound-method": "off",
+    "unicorn/consistent-date-clone": "error",
+    "unicorn/consistent-empty-array-spread": "error",
+    "unicorn/consistent-existence-index-check": "error",
+    "unicorn/error-message": "error",
+    "unicorn/no-anonymous-default-export": "error",
+    "unicorn/no-immediate-mutation": "error",
+    "unicorn/no-length-as-slice-end": "error",
+    "unicorn/no-object-as-default-parameter": "error",
+    "unicorn/no-unnecessary-array-splice-count": "error",
+    "unicorn/no-useless-collection-argument": "error",
+    "unicorn/numeric-separators-style": "error",
     "unicorn/prefer-array-find": "error",
     "unicorn/prefer-array-flat": "error",
     "unicorn/prefer-array-flat-map": "error",
     "unicorn/prefer-array-some": "error",
-    "unicorn/prefer-node-protocol": "error"
+    "unicorn/prefer-date-now": "error",
+    "unicorn/prefer-includes": "error",
+    "unicorn/prefer-keyboard-event-key": "error",
+    "unicorn/prefer-math-min-max": "error",
+    "unicorn/prefer-native-coercion-functions": "error",
+    "unicorn/prefer-node-protocol": "error",
+    "unicorn/prefer-number-properties": "error",
+    "unicorn/prefer-regexp-test": "error",
+    "unicorn/prefer-string-slice": "error",
+    "unicorn/require-number-to-fixed-digits-argument": "error"
   }
 }
