--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@sentry/react": "^10.34.0",
+    "@visx/gradient": "^3.12.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/xychart": "^3.12.0",
     "crypto-js": "^4.2.0",
     "es-toolkit": "^1.44.0",
     "expo": "54.0.31",
