improve imports sorting with OXC tools, remove legacy ESLint config

--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -16,5 +16,16 @@
     "**/assets",
     "README.md",
     "next-env.d.ts"
-  ]
+  ],
+  "experimentalSortImports": {
+    "groups": [
+      ["side-effect"],
+      ["builtin"],
+      ["external", "external-type"],
+      ["internal", "internal-type"],
+      ["parent", "parent-type"],
+      ["sibling", "sibling-type"],
+      ["index", "index-type"]
+    ]
+  }
 }
