enable Oxfmt TW classes sort, bump dependencies

--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -17,6 +17,9 @@
     "README.md",
     "next-env.d.ts"
   ],
+  "experimentalTailwindcss": {
+    "functions": ["tw"]
+  },
   "experimentalSortImports": {
     "groups": [
       ["side-effect"],
