preload and cache fonts, bump dependencies

--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -23,8 +23,7 @@
   "experimentalSortImports": {
     "groups": [
       ["side-effect"],
-      ["builtin"],
-      ["external", "external-type"],
+      ["builtin", "external", "external-type"],
       ["internal", "internal-type"],
       ["parent", "parent-type"],
       ["sibling", "sibling-type"],
