--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -65,8 +65,7 @@
     "import/no-cycle": [
       "error",
       {
-        "maxDepth": 3,
-        "disableScc": true
+        "maxDepth": 3
       }
     ],
     "import/no-duplicates": "error",
