--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "oxlint --type-aware && oxfmt --check",
     "lint:fix": "oxlint --type-aware --fix && oxfmt",
     "data:update": "bun scripts/build-and-score-data",
+    "data:update-missing": "bun scripts/build-and-score-data --missing-only",
     "data:test": "bun scripts/validate-libraries",
     "data:validate": "ajv validate -s react-native-libraries.schema.json -d react-native-libraries.json --verbose --allowUnionTypes",
     "libraries:cleanup": "bun scripts/cleanup-libraries-json && oxfmt react-native-libraries.json",
