--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "start": "next dev --webpack",
-    "build": "bun data:update && bun llms:generate && next build --webpack",
+    "build": "bun data:update && bun templates:update && bun llms:generate && next build --webpack",
     "preview": "next build --webpack && next start",
     "lint": "oxlint --type-aware && oxfmt --check",
     "lint:fix": "oxlint --type-aware --fix && oxfmt",
@@ -14,6 +14,7 @@
     "libraries:cleanup": "bun scripts/cleanup-libraries-json && oxfmt react-native-libraries.json",
     "libraries:recalculate": "bun scripts/recalculate-scores",
     "libraries:check": "bun scripts/check-resources",
+    "templates:update": "bun scripts/build-and-score-template-data",
     "llms:generate": "bun scripts/generate-llms",
     "ci:cleanup-blobs": "bun scripts/cleanup-data-blobs",
     "ci:validate": "bun scripts/validate-new-entries",
