--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "precommit": "simple-git-hooks && lint-staged"
   },
   "dependencies": {
-    "@expo/html-elements": "^0.13.8",
+    "@expo/html-elements": "^55.0.2",
     "@expo/match-media": "^0.4.0",
     "@m2d/react-markdown": "^1.0.0",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
-    "@sentry/react": "^10.37.0",
+    "@sentry/react": "^10.38.0",
     "@visx/gradient": "^3.12.0",
     "@visx/responsive": "^3.12.0",
     "@visx/xychart": "^3.12.0",
     "crypto-js": "^4.2.0",
     "es-toolkit": "^1.44.0",
-    "expo": "54.0.32",
-    "expo-font": "^14.0.11",
+    "expo": "55.0.0-preview.7",
+    "expo-font": "^55.0.3",
     "next": "^16.1.6",
     "node-emoji": "^2.2.0",
     "postcss": "^8.5.6",
@@ -60,7 +60,7 @@
     "@expo/next-adapter": "^6.0.0",
     "@next/bundle-analyzer": "^16.1.6",
     "@prettier/plugin-oxc": "^0.1.3",
-    "@types/bun": "^1.3.7",
+    "@types/bun": "^1.3.8",
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.2.10",
     "@vercel/blob": "^0.27.3",
@@ -74,7 +74,7 @@
     "next-images": "^1.8.5",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
-    "oxlint-tsgolint": "^0.11.2",
+    "oxlint-tsgolint": "^0.11.4",
     "simple-git-hooks": "^2.13.1",
     "typescript": "^5.9.3",
     "user-agent-data-types": "^0.4.2"
