--- a/.github/workflows/code-deploy-producition-quick.yml
+++ b/.github/workflows/code-deploy-producition-quick.yml
@@ -7,7 +7,27 @@ on:
       - react-native-libraries.json
 
 jobs:
+  detect_changes:
+    runs-on: ubuntu-latest
+    outputs:
+      data_changed: ${{ steps.filter.outputs.data_changed }}
+      other_changed: ${{ steps.filter.outputs.other_changed }}
+    steps:
+      - uses: actions/checkout@v6
+      - id: filter
+        name: Detect changed paths
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            data_changed:
+              - 'react-native-libraries.json'
+            other_changed:
+              - '**'
+              - '!react-native-libraries.json'
+
   build:
+    needs: detect_changes
+    if: ${{ needs.detect_changes.outputs.data_changed == 'true' && needs.detect_changes.outputs.other_changed != 'true' }}
     runs-on: ubuntu-latest
     environment:
       name: production
