update and simplify new quick deployment workflow

--- a/.github/workflows/code-deploy-production.yml
+++ b/.github/workflows/code-deploy-production.yml
@@ -6,6 +6,7 @@ on:
     paths-ignore:
       - .vscode
       - '**.md'
+      - '**.yml'
       - react-native-libraries.json
       - react-native-libraries.schema.json
   schedule:
