--- a/.github/workflows/code-lint-and-test.yml
+++ b/.github/workflows/code-lint-and-test.yml
@@ -16,7 +16,8 @@ jobs:
         uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
-      - name: List lock changes
+      - if: ${{ github.event_name == 'pull_request' }}
+        name: List lock changes
         uses: Simek/bun-lock-changes@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
