--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -12,6 +12,7 @@
     "next-env.d.ts"
   ],
   "rules": {
+    "branches-sharing-code": "error",
     "curly": "error",
     "eqeqeq": [
       "error",
@@ -78,9 +79,11 @@
     "jsx-a11y/aria-props": "error",
     "jsx-a11y/heading-has-content": "error",
     "jsx-a11y/img-redundant-alt": "error",
+    "jsx-a11y/label-has-associated-control": "error",
     "jsx-a11y/no-noninteractive-tabindex": "error",
     "jsx-a11y/no-redundant-roles": "error",
     "jsx-a11y/prefer-tag-over-role": "off",
+    "jsx-a11y/role-has-required-aria-props": "error",
     "nextjs/google-font-display": "error",
     "nextjs/google-font-preconnect": "error",
     "nextjs/inline-script-id": "error",
@@ -105,6 +108,7 @@
     "promise/always-return": "error",
     "promise/no-callback-in-promise": "error",
     "react-hooks/rules-of-hooks": "error",
+    "react/forward-ref-uses-ref": "error",
     "react/jsx-boolean-value": ["error"],
     "react/jsx-curly-brace-presence": ["error"],
     "react/jsx-fragments": ["error", "syntax"],
@@ -164,6 +168,7 @@
     "typescript/unbound-method": "off",
     "unicorn/consistent-date-clone": "error",
     "unicorn/consistent-empty-array-spread": "error",
+    "unicorn/consistent-indexed-object-style": ["error", "record"],
     "unicorn/consistent-existence-index-check": "error",
     "unicorn/error-message": "error",
     "unicorn/no-anonymous-default-export": "error",
